--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Inter:wght@400;700&family=Karla:wght@300;400;700&family=Kumbh+Sans:wght@400;700&family=Lexend+Deca&family=Outfit:wght@300;400;600&family=Poppins:wght@300;400;500;600;700;800;900&family=Red+Hat+Display:wght@500;700;900&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">      
     </head>
     <body>
-        <section>
+        <section role="main">
             <div class="container">
                 <header>
                     <h1>Join our community</h1>
